refactor: update extraction field configurations and add missing identifiers in localization files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -89,6 +89,11 @@
   "archive_location": "Archivstandort",
   "article-number": "Artikelnummer",
   "arxivId": "arXiv ID",
+  "DOI": "DOI",
+  "ISBN": "ISBN",
+  "ISSN": "ISSN",
+  "PMCID": "PMCID",
+  "PMID": "PMID",
   "author": "Autoren",
   "authority": "Rechtliche Autorität",
   "authors": "Autoren",
@@ -865,6 +870,7 @@
   "title": "Titel",
   "title-match": "Titel-Übereinstimmung",
   "title-short": "Titel (Kurz)",
+  "shortTitle": "Kurztitel",
   "token-relabeling": {
     "changeLabelFor": "Label ändern für",
     "changesCount": "Vorgenommene Änderungen",
@@ -1006,6 +1012,7 @@
   "verifying": "Verifiziert",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
+  "URL": "URL",
   "version": "Version",
   "view-demo": "Demo ansehen",
   "visit-website": "Webseite besuchen",
