--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -89,6 +89,11 @@
   "archive_location": "Archive Location",
   "article-number": "Article Number",
   "arxivId": "arXiv ID",
+  "DOI": "DOI",
+  "ISBN": "ISBN",
+  "ISSN": "ISSN",
+  "PMCID": "PMCID",
+  "PMID": "PMID",
   "author": "Authors",
   "authority": "Legal Authority",
   "authors": "Authors",
@@ -865,6 +870,7 @@
   "title": "Title",
   "title-match": "Title Match",
   "title-short": "Title (Short)",
+  "shortTitle": "Short Title",
   "token-relabeling": {
     "changeLabelFor": "Change label for",
     "changesCount": "Changes Made",
@@ -1006,6 +1012,7 @@
   "verifying": "Verifying",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
+  "URL": "URL",
   "version": "Version",
   "view-demo": "View Demo",
   "visit-website": "Visit Website",
