refactor: update matching thresholds and localization for improved clarity and consistency

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1,4 +1,10 @@
 {
+  "DOI": "DOI",
+  "ISBN": "ISBN",
+  "ISSN": "ISSN",
+  "PMCID": "PMCID",
+  "PMID": "PMID",
+  "URL": "URL",
   "about": "Über uns",
   "about-description": "Erfahre mehr über die Extension",
   "abstract": "Zusammenfassung",
@@ -39,12 +45,16 @@
   "ai-settings-api-key-placeholder": "Geben Sie Ihren API-Schlüssel ein",
   "ai-settings-api-key-required": "API-Schlüssel ist für die Nutzung der KI-Funktionen erforderlich.",
   "ai-settings-cost-warning": "Die Nutzung Ihres API-Schlüssels verursacht Kosten basierend auf den Preisen Ihres Anbieters. Überwachen Sie Ihre Nutzung auf deren Plattform.",
+  "ai-settings-delete-error": "Fehler beim Löschen der KI-Einstellungen",
+  "ai-settings-deleted": "KI-Einstellungen gelöscht",
   "ai-settings-get-api-key": "API-Schlüssel erhalten",
   "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format für den ausgewählten Anbieter.",
   "ai-settings-model-hint": "Wählen Sie das KI-Modell für die Verarbeitung. Höherwertige Modelle bieten bessere Qualität, kosten aber mehr.",
   "ai-settings-model-label": "Modell",
   "ai-settings-provider-hint": "Wählen Sie Ihren bevorzugten KI-Anbieter",
   "ai-settings-provider-label": "KI-Anbieter",
+  "ai-settings-save-error": "Fehler beim Speichern der KI-Einstellungen",
+  "ai-settings-saved": "KI-Einstellungen gespeichert",
   "ai-settings-subtitle": "Konfigurieren Sie Ihren KI-Anbieter und Modelle",
   "ai-settings-title": "KI-Konfiguration",
   "ai-settings-use-user-key": "Eigenen API-Schlüssel verwenden",
@@ -89,11 +99,6 @@
   "archive_location": "Archivstandort",
   "article-number": "Artikelnummer",
   "arxivId": "arXiv ID",
-  "DOI": "DOI",
-  "ISBN": "ISBN",
-  "ISSN": "ISSN",
-  "PMCID": "PMCID",
-  "PMID": "PMID",
   "author": "Autoren",
   "authority": "Rechtliche Autorität",
   "authors": "Autoren",
@@ -209,13 +214,27 @@
   "error": "Fehler",
   "error-reference": "Referenz konnte aufgrund eines technischen Fehlers nicht überprüft werden",
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
+  "errors": {
+    "bad_request": "Die Anfrage war ungültig. Bitte Eingaben prüfen.",
+    "conflict": "Es besteht ein Konflikt mit bestehenden Daten.",
+    "forbidden": "Du hast keine Berechtigung, diese Aktion auszuführen.",
+    "handler": "Fehler im Fehler-Handler.",
+    "internal": "Interner Serverfehler. Bitte später erneut versuchen.",
+    "not_found": "Die angeforderte Ressource wurde nicht gefunden.",
+    "rate_limited": "Zu viele Anfragen. Bitte kurz warten und erneut versuchen.",
+    "unauthorized": "Dein API-Key ist ungültig oder fehlt. Bitte prüfe die Einstellungen.",
+    "unknown": "Es ist ein unbekannter Fehler aufgetreten.",
+    "unprocessable": "Die Anfrage konnte nicht verarbeitet werden.",
+    "upstream": "Der externe Dienst ist momentan nicht erreichbar. Bitte später noch einmal probieren.",
+    "validation_error": "Ungültige Eingabe: {message}"
+  },
   "event": "Ereignis",
   "event-date": "Ereignisdatum",
   "event-place": "Ereignisort",
   "event-title": "Ereignistitel",
   "exact-match": "Exakte Übereinstimmung",
-  "exact-match-threshold": "Exakte Übereinstimmungs-Schwelle",
-  "exact-match-threshold-description": "Mindestbewertung für grünen 'exakte Übereinstimmung' Indikator",
+  "exact-match-threshold": "Exakte Übereinstimmung",
+  "exact-match-threshold-description": "Perfekte Übereinstimmungen bei 100 % Ähnlichkeit",
   "exact-match-threshold-example": "95% = Bewertungen 95-100% werden als grüne exakte Übereinstimmungen angezeigt",
   "example": "Beispiel",
   "example-explanation": "In diesem Beispiel konzentriert sich die Verifizierung zu 50 % auf Titel-Ähnlichkeit, zu 30 % auf DOI-Übereinstimmung und zu 20   % auf Autoren-Ähnlichkeit. Alle anderen Felder (Jahr, Zeitschrift, Seiten, etc.) werden ignoriert.",
@@ -578,6 +597,8 @@
   "no-impact": "Feld wird ignoriert",
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "no-match": "Keine Übereinstimmung",
+  "no-match-threshold": "Keine Übereinstimmung",
+  "no-match-threshold-description": "Referenzen unter der möglichen Übereinstimmungs-Schwelle",
   "no-matching-source-found": "Keine passende Quelle gefunden oder Überprüfung fehlgeschlagen",
   "no-references-detected": "Keine Referenzen erkannt",
   "no-references-found": "Keine Referenzen gefunden",
@@ -603,25 +624,25 @@
       "complete": "Loslegen",
       "next": "Weiter"
     },
-    "methods": {
-      "title": "Extraktionsmethoden",
-      "description": "Wählen Sie zwischen zwei leistungsstarken Methoden zur Referenzextraktion:",
-      "ai": {
-        "title": "Smart AI Extraction",
-        "description": "Nutzt moderne KI-Modelle für höchste Genauigkeit und Flexibilität. Benötigt einen API-Schlüssel.",
-        "accuracy": "Höchste Genauigkeit"
-      },
-      "anystyle": {
-        "title": "Bibliography Parser",
-        "description": "Spezialisierter Parser für bibliografische Referenzen. Funktioniert ohne API-Kosten oder externe Anmeldung.",
-        "free": "Kostenlos"
-      },
-      "info": "Sie können jederzeit zwischen den Methoden wechseln. Für optimale Ergebnisse empfehlen wir die Smart AI Extraction."
-    },
     "features": {
       "extraction": "Referenzen aus Text extrahieren",
       "matching": "Referenzen gegen akademische Datenbanken abgleichen",
       "verification": "Authentizität von Quellen überprüfen"
+    },
+    "methods": {
+      "ai": {
+        "accuracy": "Höchste Genauigkeit",
+        "description": "Nutzt moderne KI-Modelle für höchste Genauigkeit und Flexibilität. Benötigt einen API-Schlüssel.",
+        "title": "Smart AI Extraction"
+      },
+      "anystyle": {
+        "description": "Spezialisierter Parser für bibliografische Referenzen. Funktioniert ohne API-Kosten oder externe Anmeldung.",
+        "free": "Kostenlos",
+        "title": "Bibliography Parser"
+      },
+      "description": "Wählen Sie zwischen zwei leistungsstarken Methoden zur Referenzextraktion:",
+      "info": "Sie können jederzeit zwischen den Methoden wechseln. Für optimale Ergebnisse empfehlen wir die Smart AI Extraction.",
+      "title": "Extraktionsmethoden"
     },
     "progress": "Schritt {current} von {total}",
     "ready": {
@@ -666,6 +687,8 @@
   "pmcid": "PMCID",
   "pmid": "PMID",
   "popup": "Popup",
+  "possible-match-threshold": "Mögliche Übereinstimmung",
+  "possible-match-threshold-description": "Mindestbewertung für orangen 'mögliche Übereinstimmung' Indikator",
   "practical-example": "Praktisches Beispiel",
   "printing": "Auflage",
   "producer": "Produzent",
@@ -678,7 +701,7 @@
   "publisher": "Verlag",
   "publisher-place": "Verlagsort",
   "quality-thresholds": "Qualitäts-Klassifizierungs-Schwellenwerte",
-  "quality-thresholds-description": "Legen Sie die Bewertungsbereiche fest, die bestimmen, wann eine Übereinstimmung als exakt, hoch oder schlechte Qualität betrachtet wird",
+  "quality-thresholds-description": "Bewertungsbereiche für exakte (100%), starke, mögliche und keine Übereinstimmungsindikatoren konfigurieren",
   "re-verify": "Erneut überprüfen",
   "re-verify-tooltip": "Die Überprüfung für diese Referenz erneut durchführen",
   "re-verifying-reference": "Überprüfe erneut: {reference}",
@@ -833,6 +856,7 @@
   "setting-typo-correction": "Tippfehlerkorrektur",
   "setting-typo-correction-description": "Offensichtliche Rechtschreibfehler korrigieren",
   "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
+  "shortTitle": "Kurztitel",
   "show-additional-fields": "Zusätzliche Felder anzeigen",
   "show-all-fields": "Alle Felder anzeigen",
   "show-date-details": "Datumsdetails anzeigen",
@@ -848,6 +872,8 @@
   "sources-found": "Quellen gefunden",
   "status": "Status",
   "sth-went-wrong": "Etwas ist schief gelaufen",
+  "strong-match-threshold": "Starke Übereinstimmung",
+  "strong-match-threshold-description": "Mindestbewertung für grünen 'starke Übereinstimmung' Indikator",
   "submitted": "Eingereicht am",
   "subtitle": "Untertitel",
   "supplement": "Supplement",
@@ -870,7 +896,6 @@
   "title": "Titel",
   "title-match": "Titel-Übereinstimmung",
   "title-short": "Titel (Kurz)",
-  "shortTitle": "Kurztitel",
   "token-relabeling": {
     "changeLabelFor": "Label ändern für",
     "changesCount": "Vorgenommene Änderungen",
@@ -1012,7 +1037,6 @@
   "verifying": "Verifiziert",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
-  "URL": "URL",
   "version": "Version",
   "view-demo": "Demo ansehen",
   "visit-website": "Webseite besuchen",
@@ -1029,23 +1053,5 @@
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix",
-  "yes": "Ja",
-  "ai-settings-saved": "KI-Einstellungen gespeichert",
-  "ai-settings-save-error": "Fehler beim Speichern der KI-Einstellungen",
-  "ai-settings-deleted": "KI-Einstellungen gelöscht",
-  "ai-settings-delete-error": "Fehler beim Löschen der KI-Einstellungen",
-  "errors": {
-    "bad_request": "Die Anfrage war ungültig. Bitte Eingaben prüfen.",
-    "validation_error": "Ungültige Eingabe: {message}",
-    "unauthorized": "Dein API-Key ist ungültig oder fehlt. Bitte prüfe die Einstellungen.",
-    "forbidden": "Du hast keine Berechtigung, diese Aktion auszuführen.",
-    "not_found": "Die angeforderte Ressource wurde nicht gefunden.",
-    "conflict": "Es besteht ein Konflikt mit bestehenden Daten.",
-    "unprocessable": "Die Anfrage konnte nicht verarbeitet werden.",
-    "rate_limited": "Zu viele Anfragen. Bitte kurz warten und erneut versuchen.",
-    "internal": "Interner Serverfehler. Bitte später erneut versuchen.",
-    "upstream": "Der externe Dienst ist momentan nicht erreichbar. Bitte später noch einmal probieren.",
-    "handler": "Fehler im Fehler-Handler.",
-    "unknown": "Es ist ein unbekannter Fehler aufgetreten."
-  }
+  "yes": "Ja"
 }
