--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1,4 +1,10 @@
 {
+  "DOI": "DOI",
+  "ISBN": "ISBN",
+  "ISSN": "ISSN",
+  "PMCID": "PMCID",
+  "PMID": "PMID",
+  "URL": "URL",
   "about": "About",
   "about-description": "Learn more about the extension",
   "abstract": "Abstract",
@@ -39,12 +45,16 @@
   "ai-settings-api-key-placeholder": "Enter your API key",
   "ai-settings-api-key-required": "API key is required to use AI features.",
   "ai-settings-cost-warning": "Using your API key will incur charges based on your provider's pricing. Monitor your usage on their platform.",
+  "ai-settings-delete-error": "Error deleting AI settings",
+  "ai-settings-deleted": "AI settings deleted",
   "ai-settings-get-api-key": "Get API Key",
   "ai-settings-invalid-api-key-format": "Invalid API key format for the selected provider.",
   "ai-settings-model-hint": "Choose the AI model for processing. Higher-tier models offer better quality but cost more.",
   "ai-settings-model-label": "Model",
   "ai-settings-provider-hint": "Choose your preferred AI provider",
   "ai-settings-provider-label": "AI Provider",
+  "ai-settings-save-error": "Error saving AI settings",
+  "ai-settings-saved": "AI settings saved",
   "ai-settings-subtitle": "Configure your AI provider and models",
   "ai-settings-title": "AI Configuration",
   "ai-settings-use-user-key": "Use my own API Key",
@@ -89,11 +99,6 @@
   "archive_location": "Archive Location",
   "article-number": "Article Number",
   "arxivId": "arXiv ID",
-  "DOI": "DOI",
-  "ISBN": "ISBN",
-  "ISSN": "ISSN",
-  "PMCID": "PMCID",
-  "PMID": "PMID",
   "author": "Authors",
   "authority": "Legal Authority",
   "authors": "Authors",
@@ -209,13 +214,27 @@
   "error": "Error",
   "error-reference": "Reference could not be verified due to a technical error",
   "error-references-tooltip": "References that could not be verified due to a technical error",
+  "errors": {
+    "bad_request": "The request was invalid. Please check your input.",
+    "conflict": "There is a conflict with existing data.",
+    "forbidden": "You do not have permission to perform this action.",
+    "handler": "Error in the error handler.",
+    "internal": "Internal server error. Please try again later.",
+    "not_found": "The requested resource was not found.",
+    "rate_limited": "Too many requests. Please wait a moment and try again.",
+    "unauthorized": "Your API key is missing or invalid. Please check your settings.",
+    "unknown": "An unknown error has occurred.",
+    "unprocessable": "The request could not be processed.",
+    "upstream": "The external service is currently unavailable. Please try again later.",
+    "validation_error": "Invalid input: {message}"
+  },
   "event": "Event",
   "event-date": "Event Date",
   "event-place": "Event Place",
   "event-title": "Event Title",
   "exact-match": "Exact Match",
   "exact-match-threshold": "Exact Match Threshold",
-  "exact-match-threshold-description": "Minimum score for green 'exact match' indicator",
+  "exact-match-threshold-description": "Perfect matches at 100% similarity",
   "exact-match-threshold-example": "95% = scores 95-100% show as green exact matches",
   "example": "Example",
   "example-explanation": "In this example, verification will focus 50% on title similarity, 30% on DOI match, and 20% on author similarity. All other fields (year, journal, pages, etc.) are ignored.",
@@ -578,6 +597,8 @@
   "no-impact": "Field is ignored",
   "no-input-provided": "No Input Provided",
   "no-match": "No Match",
+  "no-match-threshold": "No Match",
+  "no-match-threshold-description": "References below the possible match threshold",
   "no-matching-source-found": " No matching source found or verification failed",
   "no-references-detected": "No references detected",
   "no-references-found": "No references found",
@@ -603,25 +624,25 @@
       "complete": "Get Started",
       "next": "Next"
     },
-    "methods": {
-      "title": "Extraction Methods",
-      "description": "Choose between two powerful methods for reference extraction:",
-      "ai": {
-        "title": "Smart AI Extraction",
-        "description": "Uses modern AI models for highest accuracy and flexibility. Requires an API key.",
-        "accuracy": "Highest Accuracy"
-      },
-      "anystyle": {
-        "title": "Bibliography Parser",
-        "description": "Specialized parser for bibliographic references. Works without API costs or external registration.",
-        "free": "Free"
-      },
-      "info": "You can switch between methods anytime. For optimal results, we recommend Smart AI Extraction."
-    },
     "features": {
       "extraction": "Extract references from text",
       "matching": "Match references against academic databases",
       "verification": "Verify source authenticity"
+    },
+    "methods": {
+      "ai": {
+        "accuracy": "Highest Accuracy",
+        "description": "Uses modern AI models for highest accuracy and flexibility. Requires an API key.",
+        "title": "Smart AI Extraction"
+      },
+      "anystyle": {
+        "description": "Specialized parser for bibliographic references. Works without API costs or external registration.",
+        "free": "Free",
+        "title": "Bibliography Parser"
+      },
+      "description": "Choose between two powerful methods for reference extraction:",
+      "info": "You can switch between methods anytime. For optimal results, we recommend Smart AI Extraction.",
+      "title": "Extraction Methods"
     },
     "progress": "Step {current} of {total}",
     "ready": {
@@ -666,6 +687,8 @@
   "pmcid": "PMCID",
   "pmid": "PMID",
   "popup": "Popup",
+  "possible-match-threshold": "Possible Match Threshold",
+  "possible-match-threshold-description": "Minimum score for orange 'possible match' indicator",
   "practical-example": "Practical Example",
   "printing": "Printing",
   "producer": "Producer",
@@ -678,7 +701,7 @@
   "publisher": "Publisher",
   "publisher-place": "Publisher Place",
   "quality-thresholds": "Quality Classification Thresholds",
-  "quality-thresholds-description": "Set the score ranges that determine when a match is considered exact, high, or poor quality",
+  "quality-thresholds-description": "Configure score ranges for exact (100%), strong, possible, and no match indicators",
   "re-verify": "Re-verify",
   "re-verify-tooltip": "Run verification again for this reference",
   "re-verifying-reference": "Re-verifying: {reference}",
@@ -833,6 +856,7 @@
   "setting-typo-correction": "Typo Correction",
   "setting-typo-correction-description": "Fix obvious spelling errors",
   "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
+  "shortTitle": "Short Title",
   "show-additional-fields": "Show additional fields",
   "show-all-fields": "Show all fields",
   "show-date-details": "Show date details",
@@ -848,6 +872,8 @@
   "sources-found": "",
   "status": "Status",
   "sth-went-wrong": "Something went wrong",
+  "strong-match-threshold": "Strong Match Threshold",
+  "strong-match-threshold-description": "Minimum score for green 'strong match' indicator",
   "submitted": "Date Submitted",
   "subtitle": "Subtitle",
   "supplement": "Supplement",
@@ -870,7 +896,6 @@
   "title": "Title",
   "title-match": "Title Match",
   "title-short": "Title (Short)",
-  "shortTitle": "Short Title",
   "token-relabeling": {
     "changeLabelFor": "Change label for",
     "changesCount": "Changes Made",
@@ -1012,7 +1037,6 @@
   "verifying": "Verifying",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
-  "URL": "URL",
   "version": "Version",
   "view-demo": "View Demo",
   "visit-website": "Visit Website",
@@ -1029,23 +1053,5 @@
   "year": "Year",
   "year-match": "Year Match",
   "year-suffix": "Year Suffix",
-  "yes": "Yes",
-  "ai-settings-saved": "AI settings saved",
-  "ai-settings-save-error": "Error saving AI settings",
-  "ai-settings-deleted": "AI settings deleted",
-  "ai-settings-delete-error": "Error deleting AI settings",
-  "errors": {
-    "bad_request": "The request was invalid. Please check your input.",
-    "validation_error": "Invalid input: {message}",
-    "unauthorized": "Your API key is missing or invalid. Please check your settings.",
-    "forbidden": "You do not have permission to perform this action.",
-    "not_found": "The requested resource was not found.",
-    "conflict": "There is a conflict with existing data.",
-    "unprocessable": "The request could not be processed.",
-    "rate_limited": "Too many requests. Please wait a moment and try again.",
-    "internal": "Internal server error. Please try again later.",
-    "upstream": "The external service is currently unavailable. Please try again later.",
-    "handler": "Error in the error handler.",
-    "unknown": "An unknown error has occurred."
-  }
+  "yes": "Yes"
 }
