feat: implement AI extraction toggle and settings integration

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -307,6 +307,13 @@
   "extraction-select-all": "Alle auswählen",
   "extraction-settings": "Extraktions-Einstellungen",
   "extraction-settings-description": "Konfiguriere den Extraktionsmodus und wähle die Metadatenfelder aus, die bei der Dokumentenverarbeitung extrahiert werden sollen",
+  "extraction-ai-title": "KI-Extraktion",
+  "extraction-ai-description": "Steuern Sie, ob KI-gestützte Extraktion für bessere Genauigkeit verwendet werden soll",
+  "extraction-ai-enabled": "KI für Extraktion verwenden",
+  "extraction-ai-enabled-description": "KI wird verwendet, um bibliografische Metadaten intelligent aus Dokumenten zu extrahieren und zu strukturieren",
+  "extraction-ai-disabled-description": "Nur regelbasierte Analyse verwenden - kann bei komplexen Referenzen weniger genau sein",
+  "extraction-ai-no-api-key-description": "KI-Extraktion erfordert einen API-Schlüssel - konfigurieren Sie ihn in den KI-Einstellungen",
+  "extraction-ai-fallback-info": "Wenn KI deaktiviert ist, verwendet das System traditionelle Parsing-Methoden. Dies kann zu weniger genauer Extraktion bei komplexen oder schlecht formatierten Referenzen führen.",
   "extraction-technical-details": "Technische Details",
   "extractionSettings": {
     "description": "Feld-Auswahl",
@@ -910,6 +917,9 @@
   },
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
+  "tooltip-ai-turn-off": "KI-Extraktion deaktivieren",
+  "tooltip-ai-turn-on": "KI-Extraktion aktivieren",
+  "tooltip-ai-no-api-key": "KI-Extraktion nicht verfügbar - API-Schlüssel erforderlich",
   "tooltip-abstract": "Kurze Zusammenfassung des Inhalts der Publikation (z.B. 'This study examines...')",
   "tooltip-accepted": "Datum, an dem das Manuskript zur Veröffentlichung angenommen wurde (z.B. '2024-03-15')",
   "tooltip-advisor": "Akademischer Betreuer oder Supervisor (z.B. 'Prof. Dr. Schmidt')",
