--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -307,6 +307,13 @@
   "extraction-select-all": "Select All",
   "extraction-settings": "Extraction Settings",
   "extraction-settings-description": "Configure the extraction mode and select which metadata fields should be extracted during document extraction",
+  "extraction-ai-title": "AI Extraction",
+  "extraction-ai-description": "Control whether to use AI-powered extraction for better accuracy",
+  "extraction-ai-enabled": "Use AI for extraction",
+  "extraction-ai-enabled-description": "AI will be used to intelligently extract and structure bibliographic metadata from documents",
+  "extraction-ai-disabled-description": "Fallback to rule-based parsing only - may be less accurate for complex references",
+  "extraction-ai-no-api-key-description": "AI extraction requires an API key - configure it in AI Settings",
+  "extraction-ai-fallback-info": "When AI is disabled, the system will use traditional parsing methods. This may result in less accurate extraction for complex or poorly formatted references.",
   "extraction-technical-details": "Technical Details",
   "extractionSettings": {
     "description": "Field Selection",
@@ -910,6 +917,9 @@
   },
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "tooltip-ai-turn-off": "Turn off AI extraction",
+  "tooltip-ai-turn-on": "Turn on AI extraction",
+  "tooltip-ai-no-api-key": "AI extraction is not available - API key required",
   "tooltip-abstract": "Brief summary of the publication's content (e.g. 'This study examines...')",
   "tooltip-accepted": "Date when the manuscript was accepted for publication (e.g. '2024-03-15')",
   "tooltip-advisor": "Academic advisor or supervisor (e.g. 'Prof. Dr. Schmidt')",
