feat: add information tooltip for AI and parse modes in InputCard, and update localization strings

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -685,6 +685,10 @@
   "paragraph-number": "Absatznummer",
   "parse": "",
   "parse-references": "Referenzen parsen",
+  "parse-mode-title": "Parse-Modus",
+  "parse-mode-description": "Fügen Sie Ihre Bibliographie oder Referenzliste in das Textfeld unten ein. Für beste Ergebnisse sollte jede Referenz in einer eigenen Zeile stehen. Der Parser überspringt automatisch leere Zeilen und verarbeitet strukturierte Zitate.",
+  "ai-extraction-mode-title": "KI-Extraktions-Modus",
+  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann.",
   "part": "Teil",
   "part-title": "Teiltitel",
   "partial-verification": "{verified}/{total} verifiziert ({percentage} %)",
