--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -685,6 +685,10 @@
   "paragraph-number": "Paragraph Number",
   "parse": "Parse",
   "parse-references": "Parse References",
+  "parse-mode-title": "Parse Mode",
+  "parse-mode-description": "Paste your bibliography or reference list into the text area below. For best results, place each citation on its own line. The parser will automatically skip empty lines and process structured references.",
+  "ai-extraction-mode-title": "AI Extraction Mode",
+  "ai-extraction-mode-description": "Free text input and unstructured input is possible as the AI can recognize and extract references automatically from any text format.",
   "part": "Part",
   "part-title": "Part Title",
   "partial-verification": "{verified}/{total} verified ({percentage}%)",
