--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -689,6 +689,7 @@
   "parse-mode-description": "Fügen Sie Ihre Bibliographie oder Referenzliste in das Textfeld unten ein. Für beste Ergebnisse sollte jede Referenz in einer eigenen Zeile stehen. Der Parser überspringt automatisch leere Zeilen und verarbeitet strukturierte Zitate.",
   "ai-extraction-mode-title": "KI-Extraktions-Modus",
   "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann.",
+  "file-input-disabled-parse-mode": "Datei-Upload ist nur im KI-Extraktions-Modus verfügbar. Wechseln Sie zum KI-Modus, um PDF-Dateien hochzuladen.",
   "part": "Teil",
   "part-title": "Teiltitel",
   "partial-verification": "{verified}/{total} verifiziert ({percentage} %)",
