--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -691,7 +691,7 @@
   "ai-extraction-mode-description": "Free text input and unstructured input is possible as the AI can recognize and extract references automatically from any text format.",
   "file-input-disabled-parse-mode": "File upload is only available in AI extraction mode. Switch to AI mode to upload PDF files.",
   "token-editor-help-title": "How to Use the Token Editor",
-  "token-editor-help-description": "The parser automatically segments your references (author, title, etc.) using machine learning. Review each segment carefully and correct any errors by clicking on tokens and selecting the correct label from the dropdown. Combine related tokens together - for example, 'in' typically belongs with editor or journal names. Every token must have a label for best results.",
+  "token-editor-help-description": "The parser automatically segments your references (author, title, etc.) using machine learning. Review each segment carefully and correct any errors by clicking on tokens and selecting the correct label from the dropdown. Combine related tokens together - for example, 'in' typically belongs with editor or journal names. Every token must have a label for best results. Your corrections help improve the parser model for everyone.",
   "part": "Part",
   "part-title": "Part Title",
   "partial-verification": "{verified}/{total} verified ({percentage}%)",
